<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Back">

    <Button
        android:id="@+id/button_to_main"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="400dp"
        android:layout_marginBottom="500dp"
        android:text="@string/back"
        android:textSize="30sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="176dp"
        android:layout_height="85dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/defoname"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/weight_View"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="56dp"
        android:gravity="center|start"
        android:text="@string/weight"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/name_view"
        app:layout_constraintTop_toBottomOf="@+id/button_to_main"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/height_View"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|start"
        android:text="@string/height"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/name_view"
        app:layout_constraintTop_toBottomOf="@+id/weight_View"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="384dp"
        android:layout_height="233dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/catimage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_view"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="383dp"
        android:layout_height="312dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/content_view"
            android:layout_width="384dp"
            android:layout_height="240dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/defocon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="71dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:text="@string/weightl"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toStartOf="@+id/weight_View"
        app:layout_constraintStart_toEndOf="@+id/name_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewh"
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/heightl"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toStartOf="@+id/height_View"
        app:layout_constraintStart_toEndOf="@+id/name_view"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>